--- a/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
@@ -2,7 +2,7 @@
 <div class="user-statistics__flex-container">
     <br>
 
-    <div class="dropdown">
+    <div class="dropdown graph__dropdown">
         <button type="button" class="btn btn-primary dropdown-toggle graphs-dropdown__button" data-bs-toggle="dropdown">Refine Graphs</button>
         <ul class="dropdown-menu dropdown-graph__container">
             <li th:each="dateRefineOption: ${dateRefiningOptions}">
