--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupRepositorySettings.html
@@ -17,7 +17,7 @@
     <!-- Modal -->
     <div class="modal fade" id="group-repository-settings__modal" tabindex="-1" aria-labelledby="group-repository__modal--label" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content group-repository__container">
                 <div class="modal-header group-repository-form__header">
                     <h5 class="modal-title" id="group-repository__modal--label">Repository Settings</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="updateGroupRepositoryElement(false)"></button>
