--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupStatistics.html
@@ -5,9 +5,9 @@
 
 <div class="group-statistics__flex-container">
     <br>
-    <div class="dropdown">
+    <div class="dropdown graph__dropdown">
         <button type="button" class="btn btn-primary dropdown-toggle graphs-dropdown__button" data-bs-toggle="dropdown">Refine Graphs</button>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-graph__container">
             <li th:each="dateRefineOption: ${dateRefiningOptions}">
                 <a class="dropdown-item chart__dropdown_item" th:text="${dateRefineOption.getTitle()}" th:attr="onclick=|selectRefinement('${dateRefineOption.getStartDate()}', '${dateRefineOption.getEndDate()}')|"></a>
             </li>
