--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -10,10 +10,11 @@
   <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
   <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
   <script th:src="@{scripts/group/groupHome.js}"></script>
+  <link rel="stylesheet" th:href="@{styles/theme.css}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
   <link rel="stylesheet" th:href="@{styles/group/group.css}">
   <link rel="stylesheet" th:href="@{styles/group/groups.css}">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <script th:inline="javascript">
     const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
     const GROUP_ID = [[${group.getGroupId}]];
@@ -26,7 +27,7 @@
   <script th:src="@{scripts/group/groupSettings.js}"></script>
 </head>
 
-<body>
+<body class="dark cobalt">
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
@@ -47,13 +48,13 @@
   </div>
 
   <div class="carousel-buttons flex-row">
-    <button type="button" class="btn btn-fill-tertiary group-tab-button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
+    <button type="button" class="group-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
       <span>Home</span>
     </button>
-    <button type="button" class="btn btn-fill-tertiary group-tab-button" onclick="updateChartData()" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
+    <button type="button" class="group-tab__button" onclick="updateChartData();makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
       <span>Statistics</span>
     </button>
-    <button type="button" class="btn btn-fill-tertiary group-tab-button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
+    <button type="button" class="group-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
       <span>Repository</span>
     </button>
   </div>
