--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -23,8 +23,8 @@
                   </div>
               </div>
         </div>
-        <div class="evidence-title__high-fives" th:id="'evidence-' + ${evidence.getId} + '-highfive'">
-            <div th:replace="fragments/highfive"></div>
+        <div class="evidence-title__likes" th:id="'evidence-' + ${evidence.getId} + '-like'">
+            <div th:replace="fragments/like"></div>
         </div>
     </div>
 
