--- a/portfolio/src/main/resources/static/styles/project/addEditSprint.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditSprint.css
@@ -1,17 +1,20 @@
 /******************** Add/Edit Sprint Form ********************/
+body {
+    background: var(--background);
+}
+
 
 .sprint-form__header {
     padding: 3rem 2rem 3rem 2rem;
-    border-bottom: 1px solid var(--color-accent);
-
-    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
-    color: var(--color-complement);
+    background: var(--surface);
+    color: var(--primary-highlight);
+    text-align: center;
 }
 
 #sprint-form__wrapper {
     display: block;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
+    background-color: var(--surface);
+    border: 1px solid var(--surface);
     border-radius: 1.5rem;
     overflow: hidden;
 }
@@ -22,12 +25,17 @@
 
 #sprint-form__form label {
     margin-bottom: 0.5rem;
+    margin-left: -10px;
+    color: var(--text-surface);
 }
 
 #sprint-form__form input, #sprint-form__form textarea {
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 0;
     border: none;
+    border-radius: 5px;
+    height: 40px;
     border-bottom: 2px solid lightgray;
+    padding-left: 5px;
 }
 
 .form-error-message {
@@ -42,9 +50,9 @@
 #sprint-form__form button, #sprint-form__form a {
     padding: 0;
     margin-bottom: 1rem;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    background-color: var(--primary-highlight);
+    border: 1px solid var(--primary-highlight);
+    border-radius: 8px;
     overflow: hidden;
 
     height: 3rem;
@@ -57,6 +65,6 @@
 
 /*Add some hover effects to buttons */
 #sprint-form__form button:hover, #sprint-form__form a:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
     cursor: pointer;
 }
