--- a/portfolio/src/main/resources/static/styles/project/projectDetails.css
+++ b/portfolio/src/main/resources/static/styles/project/projectDetails.css
@@ -26,24 +26,24 @@ html {
 
 /******************** Project Details ********************/
 
+/*edit, delete, planner, etc buttons*/
 #project, .project__button-wrapper button, .sprint__button-wrapper button, .event__button-wrapper button, .deadline__button-wrapper button, .milestone__button-wrapper button {
     position: relative;
-
     padding-top: 0;
     padding-bottom: 0;
-    border: 1px solid var(--color-accent);
+    border: 1px solid var(--primary-highlight);
     border-radius: 10px;
-    background-color: var(--color-complement);
-
+    color: black;
+    background-color: var(--primary-highlight);
     overflow: hidden;
 }
 
 #project header {
     padding: 3rem 2rem 3rem 2rem;
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--surface);
 
-    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
-    color: var(--color-complement);
+    background: var(--surface);
+    color: var(--text-surface);
 }
 
 #project__name {
@@ -51,6 +51,7 @@ html {
     margin: 0 0 1rem 0;
     width: calc(100% - 15rem);
     word-wrap: break-word;
+    color: var(--primary-highlight);
 }
 
 #project__date {
@@ -73,12 +74,14 @@ html {
     line-height: 3rem;
 
     /* Text */
+    color: black;
     font-size: 1rem;
     font-weight: 400;
 }
 
 .project__button-wrapper button:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
+    color: black;
     cursor: pointer;
 }
 
@@ -90,13 +93,26 @@ html {
 
 /********************Sprints ********************/
 
-.sprint, .event__outside, .deadline__outside, .milestone__outside, .new-sprint__button, .new-event__button, .new-deadline__button, .new-milestone__button {
+.sprint, .event__outside, .deadline__outside, .milestone__outside {
     display: block;
     position: relative;
 
-    border: 1px solid var(--color-accent);
+    border: 1px solid var(--primary-highlight);
     border-radius: 10px;
-    background-color: var(--color-complement);
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
+    background-color: var(--surface);
+    padding: 0 2rem 0 2rem;
+    margin-top: 1rem;
+}
+
+.new-sprint__button, .new-event__button, .new-deadline__button, .new-milestone__button {
+    display: block;
+    position: relative;
+
+    border: 1px solid var(--primary-highlight);
+    border-radius: 10px;
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
+    background-color: var(--primary-highlight);
     padding: 0 2rem 0 2rem;
     margin-top: 1rem;
 }
@@ -105,9 +121,9 @@ html {
     display: block;
     position: relative;
 
-    border: 1px solid var(--color-accent);
+    border: 1px solid var(--primary-highlight);
     border-radius: 10px;
-    background-color: var(--color-complement);
+    background-color: var(--surface);
     padding: 0 2rem 0 2rem;
 }
 
@@ -165,7 +181,7 @@ html {
 }
 
 .break{
-    border-top: 1px solid var(--color-accent);
+    border-top: 1px solid var(--outline);
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
@@ -203,7 +219,8 @@ html {
 .sprint__button-wrapper button:hover, .event__button-wrapper button:hover, .new-sprint__button:hover,
 .new-event__button:hover, .new-deadline__button:hover, .new-milestone__button:hover,
 .deadline__button-wrapper button:hover, .milestone__button-wrapper button:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
+    color: black;
     cursor: pointer;
 }
 
@@ -241,12 +258,12 @@ html {
     gap: 15px;
 }
 
-
-.btn-outline-primary {
-    color: black;
-    border-color: var(--color-accent);
-    background-color: var(--color-complement);
-    border-radius: 10px;
+/*NAVIGATION BUTTONS*/
+.btn-fill-tertiary {
+    color: var(--primary-highlight);
+    border-color: var(--primary-highlight);
+    background-color: var(--surface);
+    border-radius: 3px;
     height: 3rem;
     box-shadow: none !important;
     width: 100%;
@@ -254,20 +271,21 @@ html {
 }
 
 .btn-fill-tertiary:hover {
-    color: #f78e55;
-    border-color: #f78e55;
-    background-color: #f4ebe6;
+    color: white;
+    border-color: var(--primary-highlight);
+    background-color: var(--primary-highlight);
     height: 3rem;
     box-shadow: none !important;
     width: 100%;
     font-size: 1.5rem;
 }
 
-.btn-fill-tertiary {
-    color: white;
-    border-color: var(--color-accent);
-    background-color: #e06c41;
-    border-radius: 3px;
+/*BUTTONS idk what for???*/
+.btn-outline-primary {
+    color: black;
+    border-color: var(--surface);
+    background-color: var(--primary-highlight);
+    border-radius: 10px;
     height: 3rem;
     box-shadow: none !important;
     width: 100%;
@@ -276,14 +294,13 @@ html {
 
 .btn-outline-primary:hover {
     color: black;
-    background-color: rgba(168, 40, 16, 0.3);
-    border-color: var(--color-accent);
+    filter: brightness(80%);
+    border-color: var(--primary-highlight);
     box-shadow: none !important;
 }
 
 .btn-outline-primary:active {
     color: black;
-    background-color: var(--color-tertiary);
-    border-color: var(--color-accent);
+    filter: brightness(90%);
     box-shadow: none !important;
 }
