--- a/portfolio/src/main/resources/templates/templatesProject/editSprint.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editSprint.html
@@ -5,16 +5,17 @@
     <title>Edit Sprint</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
-    <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
-    <link th:href="@{styles/project/addEditSprint.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
+    <link th:href="@{styles/project/addEditSprint.css}" rel="stylesheet" />
     <script th:inline="javascript">
         const isEditing = [[${sprintId}]];
     </script>
 </head>
 
-<body>
+<body class="dark cobalt">
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
