#Feature added theme switching button and storing on logout.

--- a/portfolio/src/main/resources/templates/templatesUser/changePassword.html
+++ b/portfolio/src/main/resources/templates/templatesUser/changePassword.html
@@ -12,7 +12,7 @@
 
 
 </head>
-<body class="dark cobalt">
+<body>
 
     <header th:replace="fragments/header :: header"> </header>
     <nav th:replace="fragments/navbar :: nav"></nav>
