--- a/portfolio/src/main/resources/templates/templatesUser/editUser.html
+++ b/portfolio/src/main/resources/templates/templatesUser/editUser.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 
 </head>
-<body class="dark cobalt">
+<body>
         <header th:replace="fragments/header :: header"> </header>
         <nav th:replace="fragments/navbar :: nav"></nav>
 
