--- a/portfolio/src/main/resources/templates/fragments/navbar.html
+++ b/portfolio/src/main/resources/templates/fragments/navbar.html
@@ -93,6 +93,10 @@
                         </h5>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
+                                <div id="hellothere" class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                    <label class="form-check-label" for="flexSwitchCheckDefault">Dark</label>
+                                </div>
                             </div>
                         </div>
                     </div>
