--- a/portfolio/src/main/resources/templates/templatesUser/login.html
+++ b/portfolio/src/main/resources/templates/templatesUser/login.html
@@ -1,15 +1,16 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
-    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <link rel="stylesheet" th:href="@{styles/theme.css}">
+    <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link th:href="@{styles/user/loginPage.css}" rel="stylesheet"/>
-
 </head>
-<body class="dark cobalt">
+<body>
 <div class="container">
     <div class="wrapper">
         <div class="title"><span>Login</span></div>
