--- a/portfolio/src/main/resources/templates/templatesUser/register.html
+++ b/portfolio/src/main/resources/templates/templatesUser/register.html
@@ -6,10 +6,11 @@
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <link th:href="@{styles/user/registerPage.css}" rel="stylesheet" />
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 
 </head >
-<body class="dark cobalt">
+<body>
     <div class="container">
         <div class="wrapper">
             <div class="title"><span>Register</span></div>
