--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link rel="stylesheet" th:href="@{styles/theme.css}">
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script rel="script" th:src="@{scripts/user/profile.js}"></script>
@@ -30,7 +31,7 @@
     </script>
 </head>
 
-<body class="dark cobalt">
+<body>
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
