--- a/portfolio/src/main/resources/templates/templatesUser/userList.html
+++ b/portfolio/src/main/resources/templates/templatesUser/userList.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/user/userList.css}">
 </head>
-<body class="dark cobalt">
+<body>
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
