#Chore #Feature updated the files to reflect new toggle functionality

--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -27,7 +27,7 @@
   <script th:src="@{scripts/group/groupSettings.js}"></script>
 </head>
 
-<body class="dark cobalt">
+<body>
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
