--- a/portfolio/src/main/resources/templates/templatesProject/planner.html
+++ b/portfolio/src/main/resources/templates/templatesProject/planner.html
@@ -84,7 +84,7 @@
 
 </head>
 
-<body class="dark cobalt">
+<body>
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
