--- a/portfolio/src/main/resources/templates/templatesProject/editSprint.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editSprint.html
@@ -15,7 +15,7 @@
     </script>
 </head>
 
-<body class="dark cobalt">
+<body>
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
