--- a/portfolio/src/main/resources/templates/templatesProject/teacherProjectDetails.html
+++ b/portfolio/src/main/resources/templates/templatesProject/teacherProjectDetails.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 </head>
 
-<body class="dark cobalt">
+<body>
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
