--- a/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
+++ b/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
@@ -11,7 +11,7 @@
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <link rel="stylesheet" th:href="@{styles/user/addProfilePicture.css}">
 </head>
-<body class="light cobalt">
+<body>
     <!-- Import the application's header bar. -->
     <header th:replace="fragments/header :: header"></header>
     <!-- Import the application's navigation bar. -->
