#Feature Added the theme css and js file to all relevant files that I will be updating

--- a/portfolio/src/main/resources/templates/templatesProject/planner.html
+++ b/portfolio/src/main/resources/templates/templatesProject/planner.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/project/planner.css}">
     <link rel="stylesheet" th:href="@{styles/project/projectDetails.css}"/>
