--- a/portfolio/src/main/resources/templates/templatesProject/editMilestone.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editMilestone.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link th:href="@{styles/project/addEditImportantDate.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
