--- a/portfolio/src/main/resources/templates/templatesProject/editSprint.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editSprint.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/project/addEditSprint.css}" rel="stylesheet" />
     <script th:inline="javascript">
