--- a/portfolio/src/main/resources/templates/templatesProject/userProjectSummaries.html
+++ b/portfolio/src/main/resources/templates/templatesProject/userProjectSummaries.html
@@ -6,6 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link rel="stylesheet" th:href="@{styles/project/projectSummaries.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
     <script rel="script" th:src="@{scripts/project/projectSummaries.js}"></script>
