--- a/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
+++ b/portfolio/src/main/resources/templates/templatesUser/addProfilePicture.html
@@ -8,6 +8,7 @@
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <link rel="stylesheet" th:href="@{styles/user/addProfilePicture.css}">
 </head>
