--- a/portfolio/src/main/resources/templates/templatesUser/editUser.html
+++ b/portfolio/src/main/resources/templates/templatesUser/editUser.html
@@ -6,6 +6,7 @@
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
+    <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link rel="stylesheet" th:href="@{styles/user/editUser.css}">
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
