--- a/portfolio/src/main/resources/static/styles/project/addEditEvent.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditEvent.css
@@ -2,17 +2,18 @@
 
 .event-form__header {
     padding: 3rem 2rem 3rem 2rem;
-    border-bottom: 1px solid var(--color-accent);
-
-    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
-    color: var(--color-complement);
+    border-bottom: 1px solid var(--surface);
+    color: var(--primary-highlight);
+    background: var(--surface);
+    text-align: center;
 }
 
 #event-form__wrapper {
     display: block;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    background-color: var(--surface);
+    border: 1px solid var(--surface);
+    color: var(--text-surface);
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -20,16 +21,19 @@
     padding: 1rem 2rem 1rem 2rem;
 }
 
-
-
 #event-form__form label {
     margin-bottom: 0.5rem;
+    margin-left: -10px;
+    color: var(--text-surface);
 }
 
 #event-form__form input, #sprint-form__form textarea {
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 0;
     border: none;
+    border-radius: 5px;
+    height: 40px;
     border-bottom: 2px solid lightgray;
+    padding-left: 5px;
 }
 
 #char-count {
@@ -41,9 +45,9 @@
 #event-form__form button, #event-form__form a {
     padding: 0;
     margin-bottom: 1rem;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    background-color: var(--primary-highlight);
+    border: 1px solid var(--primary-highlight);
+    border-radius: 8px;
     overflow: hidden;
 
     height: 3rem;
@@ -56,6 +60,11 @@
 
 /*Add some hover effects to buttons */
 #event-form__form button:hover, #event-form__form a:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
     cursor: pointer;
+}
+
+.edit-sprint__wrapper{
+    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+    width: 100%;
 }
