--- a/portfolio/src/main/resources/static/styles/project/addEditSprint.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditSprint.css
@@ -15,7 +15,7 @@ body {
     display: block;
     background-color: var(--surface);
     border: 1px solid var(--surface);
-    border-radius: 1.5rem;
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -67,4 +67,9 @@ body {
 #sprint-form__form button:hover, #sprint-form__form a:hover {
     filter: brightness(80%);
     cursor: pointer;
+}
+
+.edit-sprint__wrapper{
+    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+    width: 100%;
 }
