--- a/portfolio/src/main/resources/templates/templatesProject/editSprint.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editSprint.html
@@ -24,41 +24,43 @@
 
     <!-- Page content -->
     <div id="page-content" class="constrict">
-        <div id="projectId" style="display: none;" th:text="${projectId}"></div>
-        <div id="name-of-edited" style="display: none;" th:text="${sprintName}"></div>
-        <div id="sprint-form__wrapper">
-            <!-- Name, Date -->
-            <header class="sprint-form__header flex-column">
-                <div th:if="${sprintId == '-1'}">
-                    <h1> Create New Sprint</h1>
-                </div>
-                <div th:if="${sprintId != '-1'}">
-                    <h1 th:text="'Editing: ' + ${sprintName}"></h1>
-                </div>
-            </header>
+        <div class="edit-sprint__wrapper">
+            <div id="projectId" style="display: none;" th:text="${projectId}"></div>
+            <div id="name-of-edited" style="display: none;" th:text="${sprintName}"></div>
+            <div id="sprint-form__wrapper">
+                <!-- Name, Date -->
+                <header class="sprint-form__header flex-column">
+                    <div th:if="${sprintId == '-1'}">
+                        <h1> Create New Sprint</h1>
+                    </div>
+                    <div th:if="${sprintId != '-1'}">
+                        <h1 th:text="'Editing: ' + ${sprintName}"></h1>
+                    </div>
+                </header>
 
-            <!-- Add/Edit Sprint Form -->
-            <form id="sprint-form__form" class="flex-column" th:action="@{editSprint-{sprint}-{project}(project=${projectId}, sprint=${sprintId})}" th:method="post">
-                <label for="sprint-form__name-field">Sprint Name *</label>
-                <input type="text" id="sprint-form__name-field" name="sprintName" minlength="1" maxlength="64" th:placeholder="${sprintName}" th:value="${sprintName}" required th:pattern="${isNotBlankPattern}" title="Sprint Name must not be blank and cannot contain special characters">
-                <p th:text="${titleError}" class="form-error-message"></p>
+                <!-- Add/Edit Sprint Form -->
+                <form id="sprint-form__form" class="flex-column" th:action="@{editSprint-{sprint}-{project}(project=${projectId}, sprint=${sprintId})}" th:method="post">
+                    <label for="sprint-form__name-field">Sprint Name *</label>
+                    <input type="text" id="sprint-form__name-field" name="sprintName" minlength="1" maxlength="64" th:placeholder="${sprintName}" th:value="${sprintName}" required th:pattern="${isNotBlankPattern}" title="Sprint Name must not be blank and cannot contain special characters">
+                    <p th:text="${titleError}" class="form-error-message"></p>
 
-                <label for="sprint-form__description-field">Sprint Description</label>
-                <textarea id="sprint-form__description-field" name="sprintDescription" maxlength="255" th:placeholder="${sprintDescription}" th:text="${sprintDescription}"></textarea>
-                <p th:text="${descriptionError}" class="form-error-message"></p>
+                    <label for="sprint-form__description-field">Sprint Description</label>
+                    <textarea id="sprint-form__description-field" name="sprintDescription" maxlength="255" th:placeholder="${sprintDescription}" th:text="${sprintDescription}"></textarea>
+                    <p th:text="${descriptionError}" class="form-error-message"></p>
 
-                <label for="sprint-form__start-date-field">Sprint Start Date *</label>
-                <p th:text="${startDateError}" class="form-error-message"></p>
-                <input type="date" id="sprint-form__start-date-field" name="sprintStartDate" th:placeholder="${sprintStartDate}" th:value="${sprintStartDate}" th:min="${minSprintStartDate}" th:max="${maxSprintEndDate}" onchange="updateMinEndDate()" required>
+                    <label for="sprint-form__start-date-field">Sprint Start Date *</label>
+                    <p th:text="${startDateError}" class="form-error-message"></p>
+                    <input type="date" id="sprint-form__start-date-field" name="sprintStartDate" th:placeholder="${sprintStartDate}" th:value="${sprintStartDate}" th:min="${minSprintStartDate}" th:max="${maxSprintEndDate}" onchange="updateMinEndDate()" required>
 
-                <label for="sprint-form__end-date-field">Sprint End Date *</label>
-                <p th:text="${endDateError}" class="form-error-message"></p>
-                <input type="date" id="sprint-form__end-date-field" name="sprintEndDate" th:placeholder="${sprintEndDate}" th:value="${sprintEndDate}" th:min="${minSprintStartDate}" th:max="${maxSprintEndDate}" onchange="updateMaxStartDate()" required>
-                <p th:text="${dateError}" class="form-error-message"></p>
-                <button type="submit" id="sprint-form__save">Save Changes</button>
+                    <label for="sprint-form__end-date-field">Sprint End Date *</label>
+                    <p th:text="${endDateError}" class="form-error-message"></p>
+                    <input type="date" id="sprint-form__end-date-field" name="sprintEndDate" th:placeholder="${sprintEndDate}" th:value="${sprintEndDate}" th:min="${minSprintStartDate}" th:max="${maxSprintEndDate}" onchange="updateMaxStartDate()" required>
+                    <p th:text="${dateError}" class="form-error-message"></p>
+                    <button type="submit" id="sprint-form__save">Save Changes</button>
 
-                <a id="sprint-form__discard" th:href="@{projectDetails-{project}(project=${projectId})}">Discard</a>
-            </form>
+                    <a id="sprint-form__discard" th:href="@{projectDetails-{project}(project=${projectId})}">Discard</a>
+                </form>
+            </div>
         </div>
     </div>
     <script rel="script" th:src="@{scripts/project/addEditSprint.js}"></script>
