--- a/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
+++ b/portfolio/src/main/resources/templates/fragmentsUser/userStatistics.html
@@ -13,6 +13,7 @@
 
     <div class="data-charts__flex-container">
         <div class="evidence-chart__flex-container">
+            <div id="user-chart__categories-chart"></div>
             <div id="user-chart__skills-chart"></div>
             <div id="user-chart__time-chart"></div>
         </div>
