--- a/portfolio/src/main/resources/templates/templatesProject/addEditEvent.html
+++ b/portfolio/src/main/resources/templates/templatesProject/addEditEvent.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <script defer rel="script" th:src="@{scripts/theme.js}"></script>
