--- a/portfolio/src/main/resources/templates/templatesProject/editProject.html
+++ b/portfolio/src/main/resources/templates/templatesProject/editProject.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>Edit Project</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
+    <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <link th:href="@{styles/stylesheet.css}" rel="stylesheet" />
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link th:href="@{styles/project/addEditProject.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
-    <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <script th:inline="javascript">
         const isEditing = [[${projectId}]];
         let restrictedStartDate
