--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -214,7 +214,7 @@ html {
 }
 
 #group-repository-form__form input, #group-repository-form__form textarea {
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 0;
     border: none;
     background-color: var(--surface-highlight);
     color: var(--text-surface);
@@ -234,7 +234,7 @@ html {
 #group-repository-form__form button, #group-repository-form__form a {
     padding: 0;
     margin-bottom: 1rem;
-    background-color: var(--surface-highlight);
+    background-color: var(--primary-highlight);
     border-radius: 8px;
     overflow: hidden;
 
@@ -244,6 +244,7 @@ html {
     color: var(--text-surface);
     font-size: 1rem;
     text-decoration: none;
+    border: none;
 }
 
 /*Add some hover effects to buttons */
