--- a/portfolio/src/main/resources/templates/templatesGroup/group.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/group.html
@@ -10,6 +10,7 @@
   <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
   <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
   <script th:src="@{scripts/group/groupHome.js}"></script>
+  <script defer th:src="@{scripts/theme.js}"></script>
   <link rel="stylesheet" th:href="@{styles/theme.css}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
