--- a/portfolio/src/main/resources/templates/fragments/navbar.html
+++ b/portfolio/src/main/resources/templates/fragments/navbar.html
@@ -95,7 +95,7 @@
                             <div class="accordion-body">
                                 <div id="hellothere" class="form-check form-switch">
                                     <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault">Dark</label>
+                                    <label class="form-check-label" id="theme-toggle__label" for="flexSwitchCheckDefault">Dark</label>
                                 </div>
                             </div>
                         </div>
@@ -104,6 +104,7 @@
             </li>
         </ul>
     </nav>
+<script></script>
 </body>
 
 </html>
