#Feature Updated the css for the add/edit project, and project summaries page

--- a/portfolio/src/main/resources/static/styles/project/projectSummaries.css
+++ b/portfolio/src/main/resources/static/styles/project/projectSummaries.css
@@ -31,12 +31,24 @@ html {
     margin-bottom: 1rem;
 }
 
-.project, #new-project__button, .project__button-wrapper button {
+.project {
     padding-top: 0;
     padding-bottom: 0;
-    border: 1px solid var(--color-accent);
+    border: 1px solid var(--surface);
     border-radius: 10px;
-    background-color: var(--color-complement);
+    background-color: var(--surface);
+}
+
+#new-project__button, .project__button-wrapper button {
+    padding-top: 0;
+    padding-bottom: 0;
+    border: 1px solid var(--primary-highlight);
+    border-radius: 10px;
+    background-color: var(--primary-highlight);
+}
+
+.project__button-wrapper button:hover {
+    filter: brightness(80%);
 }
 
 .project__details-wrapper {
@@ -49,13 +61,13 @@ html {
     padding: 0;
     height: 5rem;
     line-height: 5rem;
-
+    color: var(--primary-highlight);
     cursor: pointer;
     width: calc(100% - 25rem);
 }
 
 .project__name:hover {
-    color: var(--color-accent);
+    filter: brightness(80%);
 }
 
 .project.collapsed {
@@ -73,7 +85,7 @@ html {
 }
 
 .project.expanded .project__details {
-    border-top: 1px solid var(--color-accent);
+    border-top: 1px solid var(--surface);
     padding-top: 1rem;
     visibility: visible;
 }
@@ -122,7 +134,7 @@ html {
 }
 
 #new-project__button:hover, .project__button-wrapper button:hover{
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
     cursor: pointer;
 }
 
@@ -131,12 +143,13 @@ html {
 
 .sprint, .new-sprint__button {
     padding: 0 2rem 0 2rem;
-    border-top: 1px solid var(--color-accent);
-    background-color: var(--color-complement);
+    border-top: 1px solid var(--surface);
+    background-color: var(--surface);
+    color: var(--text-surface);
 }
 
 .sprint:last-child {
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--surface);
 }
 
 .sprint__name {
@@ -144,12 +157,12 @@ html {
     padding: 0;
     height: 3rem;
     line-height: 3rem;
-
+    color: var(--primary-highlight);
     cursor: pointer;
 }
 
 .sprint__name:hover {
-    color: var(--color-accent);
+    filter: brightness(80%);
 }
 
 .sprint.collapsed {
@@ -165,7 +178,7 @@ html {
 }
 
 .sprint.expanded .sprint__details {
-    border-top: 1px solid var(--color-accent);
+    border-top: 1px solid var(--surface);
     padding-top: 1rem;
     visibility: visible;
 }
@@ -175,6 +188,6 @@ html {
 }
 
 .new-sprint__button:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
     cursor: pointer;
 }
