--- a/portfolio/src/main/resources/static/styles/project/addEditProject.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditProject.css
@@ -2,17 +2,18 @@
 
 .project-form__header {
     padding: 3rem 2rem 3rem 2rem;
-    border-bottom: 1px solid var(--color-accent);
-
-    background-image: linear-gradient(180deg, var(--color-primary), var(--color-tertiary) 90%);
-    color: var(--color-complement);
+    border-bottom: 1px solid var(--surface);
+    color: var(--primary-highlight);
+    background: var(--surface);
+    text-align: center;
 }
 
 #project-form__wrapper {
     display: block;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    background-color: var(--surface);
+    border: 1px solid var(--surface);
+    color: var(--text-surface);
+    border-radius: 8px;
     overflow: hidden;
 }
 
@@ -22,21 +23,26 @@
 
 #project-form__form label {
     margin-bottom: 0.5rem;
+    margin-left: -10px;
+    color: var(--text-surface);
 }
 
 #project-form__form input, #project-form__form textarea {
-    margin: 0 0 1rem 1rem;
+    margin: 0 0 1rem 0;
     border: none;
+    border-radius: 5px;
+    height: 40px;
     border-bottom: 2px solid lightgray;
+    padding-left: 5px;
 }
 
 /* Set a style for the  button */
 #project-form__form button, #project-form__form a {
     padding: 0;
     margin-bottom: 1rem;
-    background-color: var(--color-complement);
-    border: 1px solid var(--color-accent);
-    border-radius: 1.5rem;
+    background-color: var(--primary-highlight);
+    border: 1px solid var(--primary-highlight);
+    border-radius: 8px;
     overflow: hidden;
 
     height: 3rem;
@@ -49,6 +55,11 @@
 
 /*Add some hover effects to buttons */
 #project-form__form button:hover, #project-form__form a:hover {
-    background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(80%);
     cursor: pointer;
+}
+
+.edit-project__wrapper{
+    box-shadow: 0px 4px 10px 1px rgba(0,0,0,0.1);
+    width: 100%;
 }
