--- a/portfolio/src/main/resources/static/styles/project/planner.css
+++ b/portfolio/src/main/resources/static/styles/project/planner.css
@@ -41,3 +41,15 @@
 .milestonePlannerGrid {
     bottom: -100px;
 }
+
+.cal-con button {
+    background: var(--primary-highlight)!important;
+    border-color: var(--primary-highlight)!important;
+    color: black!important;
+}
+
+.calendar__container button:hover {
+    filter: brightness(85%)!important;
+    border-color: var(--primary-highlight)!important;
+    color: black!important;
+}
