--- a/portfolio/src/main/resources/static/styles/evidence/categories.css
+++ b/portfolio/src/main/resources/static/styles/evidence/categories.css
@@ -42,9 +42,9 @@ html {
 }
 
 .no-category__link {
-    border: 1px solid ;
+    border: 1px solid var(--text-surface);
     border-radius: 5px;
-    background-color: var(--surface-highlight);
+    background-color: var(--surface);
     padding: 2px 4px 2px 4px;
     margin: 4px;
     display: inline;
