--- a/portfolio/src/main/resources/static/styles/evidence/skills.css
+++ b/portfolio/src/main/resources/static/styles/evidence/skills.css
@@ -34,7 +34,7 @@ html {
 .no-skill__link {
     border: 1px solid var(--primary-highlight);
     border-radius: 5px;
-    background-color: var(--surface-highlight);
+    background-color: var(--surface);
     padding: 2px 4px 2px 4px;
     margin: 4px;
     display: inline;
