--- a/portfolio/src/main/resources/templates/templatesProject/planner.html
+++ b/portfolio/src/main/resources/templates/templatesProject/planner.html
@@ -4,11 +4,11 @@
     <title th:text="${project.getName}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
-    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <script defer rel="script" th:src="@{scripts/theme.js}"></script>
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" th:href="@{styles/project/planner.css}">
@@ -101,7 +101,7 @@
                 <p hidden="hidden" id="user__rolesList" th:text="${user.roles}"></p>
             </header>
 
-            <div id="calendar__container">
+            <div id="calendar__container" class="cal-con">
                 <div id="calendar"></div>
             </div>
 
